# schema

./: CNAME  README.md  index.html  jupyter_schemas.py  pyproject.toml
docs/: conf.py  example.rst  index.rst
jupyter_server/events/contents_service/: v1.json
jupyter_server/events/gateway_client/: v1.json
jupyter_server/events/kernel_actions/: v1.json
schema/kernel/messages/v1/: kernel-info-request.schema.json  message-header.schema.json
schema/kernel/spec/v1/: kernelspec.schema.json
schema/server/contents/v1/: contents.schema.json
schema/server/events/gateway-client/v1/: gateway-client.schema.json
schema/server/events/kernel-actions/v1/: kernel-actions.schema.json
tests/: test_validate.py
